Updated @BeforeAll to @BeforeEach to resolve test failure